--- a/panduan-umum-pkm/index.html
+++ b/panduan-umum-pkm/index.html
@@ -19,6 +19,19 @@
         <h1>Panduan Umum PKM 2025: PKM KC, PKM PM, PKM RSH, PKM RE, PKM PI, PKM K, PKM VGK, PKM KI, PKM GFT, PKM AI</h1>
         <h1>Bukan website resmi. Ok? BUKAN WEBSITE RESMI.</h1>
         <button onclick="if (confirm('Yuk, berikan komentar Kamu mengenai pedoman PKM 2025 (Show Username IG Bro :D)')) { window.open('https://secreto.site/aer5t7', '_blank'); }">
+           <div id="audio-player">
+    <div id="header">
+      <img id="thumbnail" src="https://img.youtube.com/vi/MkQeQYvcsbo/default.jpg" alt="Thumbnail">
+      <div id="title">Loading title...</div>
+    </div>
+    <div id="audio-controls">
+      <button id="play-pause">▶</button>
+      <span id="current-time">0:00</span> /
+      <span id="duration">0:00</span>
+      <input type="range" id="seek-bar" value="0" min="0" max="100">
+    </div>
+  </div>
+  <div id="youtube-player"></div>
             Beri Komentar tentang Panduan Umum PKM 2025 (Klik)
         </button>
     <p>Buku panduan PKM 2025 ini disusun sebagai dasar pelaksanaan Program Kreativitas Mahasiswa (PKM) tahun 2025. Secara keseluruhan, buku panduan ini terdiri dari 11 buku, yaitu:</p>
