--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
   <button onclick="alertTutorial()">TUTORIAL</button>
   <button onclick="goComment()">Kasih Komentar</button>
   <button onclick="playLatch()">Now I've got you in my space (add/rmv)</button>
+  <button onclick="bantuAku()">Bantu Aku Pls Pls</button>
   <button onclick="hideMenu()">Sembunyikan Menu</button>
   <br />
   <div id="latch-screen">
