--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
   <button onclick="alertTutorial()">TUTORIAL</button>
   <button onclick="goComment()">Kasih Komentar</button>
   <button onclick="playLatch()">Now I've got you in my space (add/rmv)</button>
-  <button onclick="bantuAku()">Bantu Aku Pls Pls</button>
+  <button onclick="bantuAku()">YOK DAFTAR LOMBA NGODING/ UI UX/ POSTER/ PAPER BOLE BUAT ANAK KULIAH/ SMA (author koornya)</button>
   <button onclick="hideMenu()">Sembunyikan Menu</button>
   <br />
   <div id="latch-screen">
