--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <div id="latch-screen">
   </div>
 </span>
-<link rel="stylesheet" href="css-snbp.css" />
+<link rel="stylesheet" href="https://snbp.usu.ac.id/css/index.css?v=2025.0.37" />
 <link rel="stylesheet" href="css2-snbp.css" />
 
 <body id="body">
